add the active and inactive screen and different enums

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MedicalAppReminder-Java</string>
+    <string name="addMedication" />
+    <string name="add_med">Add medication</string>
 </resources>
