Added the 2 screens for dependent and the medication screeen with adding the navigation manager and tab bar and tool bar (needs modification)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">MedicalAppReminder-Java</string>
     <string name="addMedication" />
     <string name="add_med">Add medication</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="addMedicaton">Add Medication</string>
 </resources>
