--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,13 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="addMedicaton">Add Medication</string>
+    <string name="Profiles">Profiles</string>
+    <string name="add_dependent">Add dependent</string>
+    <string name="MedFriends">MedFriends</string>
+    <string name="verification_code">Verfication Code</string>
+    <string name="home">Home</string>
+    <string name="medications">Medications</string>
+    <string name="more">More</string>
+    <string name="med">Med</string>
 
 </resources>
