--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="addMedicaton">Add Medication</string>
+    <string name="do_not_have_acc">Don\'t Have Account, Sign Up.</string>
 
 </resources>
